# tg-gateway

./: .gitignore  LICENSE  README.md  config.example.json  pyproject.toml
scripts/: gateway.py  tgctl.py
