[project]
name = "tg-gateway"
version = "0.2.0"
description = "Lightweight bidirectional Telegram Bot Gateway for Omnibot (raw HTTP)"
requires-python = ">=3.10"
dependencies = [
    "httpx[socks]>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
